--- a/templates/tu_template.html
+++ b/templates/tu_template.html
@@ -9,6 +9,6 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <h1>Este es mi template</h1>
+        <h1>Este es el template de {{persona}}</h1>
     </body>
 </html>
