Se insertan derecho las personas

--- a/templates/crear_personas.html
+++ b/templates/crear_personas.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <H1>Se CREO OK!!!</H1>
+    <H1>Se crearon OK las personas!</H1>
 </body>
 </html>
