--- a/templates/ver_personas.html
+++ b/templates/ver_personas.html
@@ -9,7 +9,7 @@
 <body>
     {% for persona in personas %}
     <li>
-        {{persona.apellido}} , {{persona.nombre}} - {{persona.edad}} --> {{persona.fecha_nacimiento}} 
+        {{persona.apellido}} , {{persona.nombre}} - {{persona.edad}} --> {{persona.fecha_alta}} 
     </li>
     {% endfor %}
 </body>
